syntax = "proto3";

package auth;

option go_package = "v0hmly.auth.v1;authv1";

service Auth {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns(LogoutResponse);
}

//Register
message RegisterRequest {
  string email = 1;
  string first_name = 2;
  string last_name = 3;
  string password = 4;
}

message RegisterResponse {
  string user_id = 1;
}

//Login
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string session_id = 1;
}

//Logout
message LogoutRequest {
}

message LogoutResponse {
}

